# disk.yandex

./: .gitignore  BUILD_FROM_SOURCE.md  README.md  SECURITY.md  pyproject.toml  requirements.direct.txt  requirements.txt  start.bat
app/: __init__.py  accounts.py  config.py  history.py  main.py  schemas.py  security.py  storage.py
app/static/: app.js  index.html  styles.css
app/yandex_disk/: __init__.py  client.py
docs/: YDCMD_REVIEW.md
tests/: test_client.py
